test/compilable/imports/d12359.d
module imports.d12359;

enum LetterCase { upper, lower }
