test/fail_compilation/imports/test2830a.d
module imports.test2830a;

private struct TestStruct
{
}
